--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@ header{
     font-size: 20px;
     font-family: Helvetica;
     border-bottom:2px solid  #509de6;
-    width:100vw;
+    width:100%;
     margin:0;
     height:15vh;
     padding:0;
     background-position: center;
+    background-image: url("https://image.freepik.com/free-vector/stock-exchange-background_71983-818.jpg");
+    background-repeat: ;
+ 
+   
 }
 nav{
     display:flex;
