--- a/style.css
+++ b/style.css
@@ -8,15 +8,12 @@ header{
     font-size: 20px;
     font-family: Helvetica;
     border-bottom:2px solid  #509de6;
-    width:100%;
+    width:100vw;
     margin:0;
     height:15vh;
     padding:0;
     background-position: center;
-    background-image: url("https://image.freepik.com/free-vector/stock-exchange-background_71983-818.jpg");
-    background-repeat: ;
- 
-   
+    background-image: url("https://image.freepik.com/free-vector/stock-exchange-background_71983-817.jpg");
 }
 nav{
     display:flex;
