--- a/style.css
+++ b/style.css
@@ -48,6 +48,22 @@ body{
 p{
     color: #509de6;
 }
+#textinput {
+  /*  TODO 2.*/
+  font-family: "Lucida Console", Courier, monospace;
+  /*  TODO 1.*/
+  border-bottom: 5px solid; 
+  width: 400px;
+  height: 50px;
+  font-size: 20px;
+  text-align: center;
+}
+.box {
+  display: inline-block;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
 #list {
     margin:0 auto;
     width: 300px;
