🐃🌷 Checkpoint ./script.js:9236857/353 ./style.css:9236857/157

--- a/style.css
+++ b/style.css
@@ -58,6 +58,12 @@ p{
   font-size: 20px;
   text-align: center;
 }
+#stockInfo{
+   font-family: "Times New Roman", Times, serif;
+   color: white;
+ 
+  margin: 2em;
+}
 .box {
   display: inline-block;
   display: flex;
